--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "lucide-react": "^0.309.0",
     "next": "^14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "typescript": "^5.0.0",
-    "lucide-react": "^0.309.0" 
+    "react-markdown": "^9.0.3",
+    "remark-gfm": "^4.0.1",
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.0.0",
     "postcss": "^8.0.0",
     "tailwindcss": "^3.0.0",
