--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "typescript": "^5.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
