--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,13 @@
-Flask>=2.2
-Flask-Cors>=3.0.10
-PyPDF2>=3.0.0
-python-dotenv>=1.0.0
-requests>=2.26.0
-pdf2image>=1.16.0
-pytesseract>=0.3.9
-pdfplumber>=0.6.0
-google-generativeai>=0.1.0
-fpdf>=1.7.2
-gunicorn>=20.0.0
-redis
+flask==2.3.3
+flask-cors==4.0.0
+python-dotenv==1.0.0
+requests==2.31.0
+redis==5.0.1
+rq==1.15.1
+PyPDF2==3.0.1
+pdfplumber==0.10.3
+pdf2image==1.16.3
+pytesseract==0.3.10
+Werkzeug==2.3.7
+gunicorn==21.2.0
+python-multipart==0.0.6
