--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,18 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.4",
+    "@tiptap/pm": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "lucide-react": "^0.309.0",
+    "markdown-it": "^14.1.0",
     "next": "^14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-markdown": "^9.0.3",
+    "react-markdown": "^9.1.0",
     "remark-gfm": "^4.0.1",
     "typescript": "^5.0.0"
   },
