--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.0.0",
     "react-markdown": "^9.0.3",
     "remark-gfm": "^4.0.1",
+    "turndown": "^7.2.0",
     "typescript": "^5.0.0"
   },
   "devDependencies": {
