--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "html-to-markdown": "^1.0.0",
     "lucide-react": "^0.309.0",
+    "markdown-it": "^14.1.0",
     "next": "^14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-markdown": "^9.0.3",
     "remark-gfm": "^4.0.1",
+    "slate": "^0.112.0",
+    "slate-history": "^0.110.3",
+    "slate-react": "^0.112.1",
     "turndown": "^7.2.0",
     "typescript": "^5.0.0"
   },
